prusti/tests/verify/todo/overflows/overflow.rs

fn test(x: u32, y: u32) -> u32 {
    x + y //~ ERROR
}

fn main() {}
